src/tirateima/parser/TiraTeimaParser.java
/* Generated By:JavaCC: Do not edit this line. TiraTeimaParser.java */
package tirateima.parser;

import java.awt.Color;
import java.awt.Dimension;
import java.awt.Point;
import java.util.ArrayList;
import java.util.List;
import java.util.ListIterator;
import java.util.Stack;

import tirateima.controlador.CommandAttribution;
import tirateima.controlador.CommandDirectPointer;
import tirateima.controlador.CommandEndFunction;
import tirateima.controlador.CommandInsertText;
import tirateima.controlador.CommandJump;
import tirateima.controlador.CommandNewType;
import tirateima.controlador.CommandNewVar;
import tirateima.controlador.CommandNewVarText;
import tirateima.controlador.CommandOperationCall;
import tirateima.controlador.CommandStartFunction;
import tirateima.controlador.FunctionDeclaration;
import tirateima.controlador.Index;
import tirateima.controlador.Step;
import tirateima.controlador.Type;
import tirateima.controlador.TypeId;
import tirateima.controlador.VarDefinition;

public class TiraTeimaParser implements TiraTeimaParserConstants {

        /** Trata a string caractere a caractere, e troca as substrings de caracteres de escape 
	*	por apenas um caractere de escape
	*	@param s A string a ser tratada
	*	@return Uma nova string com os caracteres que necessitam de tratamento já tratados
	*/
        private String tratarString(String s) {
                char chars[] = s.toCharArray();
                StringBuffer buffer = new StringBuffer();

                //ignora as aspas
                int lim = chars.length - 1;
                for(int i = 1; i < lim; i++) {
                        if (chars[i] == '\u005c\u005c') {
                                switch (chars[++i]) {
                                        case '\u005c\u005c':
                                                buffer.append('\u005c\u005c');
                                                break;
                                        case 't':
                                                buffer.append('\u005ct');
                                                break;
                                        case 'n':
                                                buffer.append('\u005cn');
                                                break;
                                        case 'r':
                                                buffer.append('\u005cr');
                                                break;
                                        case '"':
                                                buffer.append('"');
                                                break;
                                }
                        } else {
                                buffer.append(chars[i]);
                        }
                }

                return buffer.toString();
        }

        /** Trata uma string que seja um caractere, trocando as o valor por um caracteres de 
	*		escape, se necessário
	*	@param s A string a ser tratada como um caractere
	*	@return Um novo caractere já tratado, caso tenha sido encontrado um literal
	*/
        private Character tratarChar(String s) {
                char chars[] = s.toCharArray();

                //ignora as aspas
                char c = chars[1];
                if (c == '\u005c\u005c') {
                        switch (chars[2]) {
                                case '\u005c\u005c':
                                        c = '\u005c\u005c';
                                        break;
                                case 't':
                                        c = '\u005ct';
                                        break;
                                case 'n':
                                        c = '\u005cn';
                                        break;
                                case 'r':
                                        c = '\u005cr';
                                        break;
                                case '\u005c'':
                                        c = '\u005c'';
                                        break;
                        }
                }

                return new Character(c);
        }

/** Um passo é uma indicação de linha seguida de um comando com ou sem label:
*	[line] <nro linha> [label] <comando> 
*/
  final public Step step() throws ParseException {
        Token nroLinha;
        Token label;
        Step p;
    if (jj_2_3(3)) {
      if (jj_2_1(3)) {
        jj_consume_token(KW_LINE);
      } else {
        ;
      }
      nroLinha = jj_consume_token(INT_NUMBER);
                                          p = new Step(Integer.parseInt(nroLinha.image));
      if (jj_2_2(3)) {
        label(p);
      } else {
        ;
      }
      command(p);
                           {if (true) return p;}
    } else if (jj_2_4(3)) {
      jj_consume_token(0);
                      {if (true) return null;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**	Um comando é um dos comandos básicos ou é um bloco de comandos
*	@param p Um Step
*/
  final public void command(Step p) throws ParseException {
    if (jj_2_5(3)) {
      jj_consume_token(SEMICOLON);
    } else if (jj_2_6(3)) {
      cmd_new_type(p);
    } else if (jj_2_7(3)) {
      cmd_new_var(p);
    } else if (jj_2_8(3)) {
      cmd_atrib(p);
    } else if (jj_2_9(3)) {
      cmd_direct_pointer(p);
    } else if (jj_2_10(3)) {
      cmd_new_file(p);
    } else if (jj_2_11(3)) {
      cmd_jump(p);
    } else if (jj_2_12(3)) {
      function_declaration(p);
    } else if (jj_2_13(3)) {
      function_start(p);
    } else if (jj_2_14(3)) {
      function_end(p);
    } else if (jj_2_15(3)) {
      operation_call(p);
    } else if (jj_2_16(3)) {
      cmd_insert_text(p);
    } else if (jj_2_17(3)) {
      bloco(p);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/** Adiciona um label ao passo caso caso exista */
  final public void label(Step p) throws ParseException {
        Token label;
    label = jj_consume_token(IDENTIFIER);
                               p.label = label.image;
    jj_consume_token(COLON);
  }

/**
*   Cria um comando de jump e o insere na lista de passos. O comando jump faz com que se vá
*   para um estado que não necessáriamente é o próximo da lista. Procura-se, então, o passo
*   que possui um determinado label associado e o fluxo de execução recomeça a partir dele.
*
*   Essa estrutura se parece com os jumps do assembly ou com os goto de algumas linguagens.
* 
*   Esse jump pode ser de dois tipos:
*   - JUMP CONDICIONAL: vai para o passo com um determinado label se uma condição for tida.
*   - JUMP INCONDICIONAL: vai para o passo com um label determinado independente de qualquer
*     condição.
*/
  final public void cmd_jump(Step p) throws ParseException {
    Token label;
    jj_consume_token(KW_GOTO);
    jj_consume_token(OPEN_PAR);
    label = jj_consume_token(IDENTIFIER);
                p.addCommand(new CommandJump(label.image));
    jj_consume_token(CLOSE_PAR);
    jj_consume_token(SEMICOLON);
  }

/**
*Insere um texto de um determinado tamanho em uma dada posição
*/
  final public void cmd_insert_text(Step p) throws ParseException {
        String conteudo;
        Point posicao;
        Integer tamanho;
    jj_consume_token(KW_INSERE_TEXTO);
    conteudo = conteudo();
    tamanho = font_size();
    posicao = posicao();
    jj_consume_token(SEMICOLON);
                p.addCommand(new CommandInsertText(conteudo,tamanho,posicao));
  }

/**	Cria um novo tipo, criando uma lista com as variáveis que compõem este tipo
*	@param p Um Step
*/
  final public void cmd_new_type(Step p) throws ParseException {
        Token t_name;
        String name;
        List<VarDefinition> aux, fields;
    jj_consume_token(KW_RECORD);
                     fields = new ArrayList<VarDefinition>();
    t_name = jj_consume_token(IDENTIFIER);
                                 name = t_name.image;
    jj_consume_token(OPEN_BRACE);
    label_1:
    while (true) {
      aux = new_vars();
                 fields.addAll(aux);
      if (jj_2_18(3)) {
        ;
      } else {
        break label_1;
      }
    }
    jj_consume_token(CLOSE_BRACE);
                 p.addCommand(new CommandNewType(name, fields));
  }

/**	Gera um objeto list de VarDefinition's com as variáveis solicitadas
*	@return Uma lista com as N variáveis solicitadas.
*/
  final public List<VarDefinition> new_vars() throws ParseException {
        Type type;
        VarDefinition v;
        List<VarDefinition> vars = new ArrayList<VarDefinition>();
    type = type();
    v = new_var(type);
                          vars.add(v);
    label_2:
    while (true) {
      if (jj_2_19(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      v = new_var(type);
                                  vars.add(v);
    }
    jj_consume_token(SEMICOLON);
                    {if (true) return vars;}
    throw new Error("Missing return statement in function");
  }

/**	Retorna um objeto com o tipo selecionado, com base na KW encontrada
*	@return Um objeto com o tipo selecionado
*/
  final public Type type() throws ParseException {
        Token t;
    if (jj_2_20(3)) {
      t = jj_consume_token(KW_INT);
                               {if (true) return new Type(TypeId.INTEGER);}
    } else if (jj_2_21(3)) {
      t = jj_consume_token(KW_REAL);
                                {if (true) return new Type(TypeId.REAL);}
    } else if (jj_2_22(3)) {
      t = jj_consume_token(KW_CHAR);
                                {if (true) return new Type(TypeId.CHAR);}
    } else if (jj_2_23(3)) {
      t = jj_consume_token(KW_STRING);
                                  {if (true) return new Type(TypeId.STRING);}
    } else if (jj_2_24(3)) {
      t = jj_consume_token(KW_BOOLEAN);
                                   {if (true) return new Type(TypeId.BOOLEAN);}
    } else if (jj_2_25(3)) {
      t = jj_consume_token(KW_POINTER);
                                   {if (true) return new Type(TypeId.POINTER);}
    } else if (jj_2_26(3)) {
      t = jj_consume_token(IDENTIFIER);
                                   {if (true) return new Type(TypeId.RECORD, t.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/**	Gera apenas uma VarDefinition já configurando cor interna e externa, tamanho e posição
*	@return Uma VarDefinition com a variável.
*/
  final public VarDefinition new_var(Type type) throws ParseException {
        Token t_name_var;
        Index i = null;
        Color color = null;
        Color colorOutside = null;
        Dimension dimension = null;
        Point posicao = null;
    t_name_var = jj_consume_token(IDENTIFIER);
    if (jj_2_27(3)) {
      i = index();
    } else {
      ;
    }
    if (jj_2_28(3)) {
      color = cor();
    } else {
      ;
    }
    if (jj_2_29(3)) {
      colorOutside = corExterna();
    } else {
      ;
    }
    if (jj_2_30(3)) {
      dimension = dimensao();
    } else {
      ;
    }
    if (jj_2_31(3)) {
      posicao = posicao();
    } else {
      ;
    }
                {if (true) return new VarDefinition(type, t_name_var.image, i, color, colorOutside, dimension, posicao);}
    throw new Error("Missing return statement in function");
  }

/**	Cria e retorna um objeto de cor interna para a variável
*	@return Um objeto Color com a cor da variável
*/
  final public Color cor() throws ParseException {
        Token t_value;
        int r=0;
        int g=0;
        int b=0;
    jj_consume_token(KW_COLOR);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                r = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                g = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                b = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Color(r,g,b);}
    throw new Error("Missing return statement in function");
  }

/**	Cria e retorna um objeto de cor a ser utilizado para a cor externa da variável
*	@return Um objeto Color com a cor externa da variável
*/
  final public Color corExterna() throws ParseException {
        Token t_value;
        int r=0;
        int g=0;
        int b=0;
    jj_consume_token(KW_COLOR_INSIDE);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                r = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                g = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                b = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Color(r,g,b);}
    throw new Error("Missing return statement in function");
  }

/**	Retorna um objeto Dimension com os dados do tamanho da variável na GUI
*	@return O objeto Dimension para formatar o tamanho da variável.
*/
  final public Dimension dimensao() throws ParseException {
        Token t_value;
        int largura=0;
        int altura=0;
    jj_consume_token(KW_DIMENSION);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                largura = Integer.parseInt(t_value.image);
    jj_consume_token(COMMA);
    t_value = jj_consume_token(INT_NUMBER);
                altura = Integer.parseInt(t_value.image);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return new Dimension(largura,altura);}
    throw new Error("Missing return statement in function");
  }

/**
*   Cria uma string a partir do texto passado no roteiro
*/
  final public String conteudo() throws ParseException {
  Token t_value;
    jj_consume_token(KW_CONTEUDO);
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(STRING_LITERAL);
    jj_consume_token(CLOSE_PAR);
                    {if (true) return t_value.image;}
    throw new Error("Missing return statement in function");
  }

/**
*   Cria um Point para posicionar o objeto na GUI, com base nos valores passados.
*   @return O objeto Point para ser utilizado no posicionamento da variável.
*/
  final public Point posicao() throws ParseException {
        Point coordenadas;
    jj_consume_token(KW_POSITION);
    coordenadas = coordenadas();
                {if (true) return coordenadas;}
    throw new Error("Missing return statement in function");
  }

/**
*   Cria um par de coordenadas x, y 
*/
  final public Point coordenadas() throws ParseException {
        Token t_value;
        int x=0;
        int y=0;
    jj_consume_token(OPEN_PAR);
    t_value = jj_consume_token(INT_NUMBER);
                x = Integer.parseInt(t_value.image);
